@@ -17,11 +17,10 @@
 package org.apache.solr.response;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-
 import org.apache.solr.SolrTestCase;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
@@ -30,26 +29,30 @@ import org.apache.solr.search.SolrReturnFields;
 import org.junit.Test;
 
 public class TestSolrQueryResponse extends SolrTestCase {
-  
+
   @Test
-  public void testName() throws Exception {
+  public void testName() {
     assertEquals("SolrQueryResponse.NAME value changed", "response", SolrQueryResponse.NAME);
   }
 
   @Test
-  public void testResponseHeaderPartialResults() throws Exception {
-    assertEquals("SolrQueryResponse.RESPONSE_HEADER_PARTIAL_RESULTS_KEY value changed",
-        "partialResults", SolrQueryResponse.RESPONSE_HEADER_PARTIAL_RESULTS_KEY);
+  public void testResponseHeaderPartialResults() {
+    assertEquals(
+        "SolrQueryResponse.RESPONSE_HEADER_PARTIAL_RESULTS_KEY value changed",
+        "partialResults",
+        SolrQueryResponse.RESPONSE_HEADER_PARTIAL_RESULTS_KEY);
   }
 
   @Test
-  public void testResponseHeaderSegmentTerminatedEarly() throws Exception {
-    assertEquals("SolrQueryResponse.RESPONSE_HEADER_SEGMENT_TERMINATED_EARLY_KEY value changed",
-        "segmentTerminatedEarly", SolrQueryResponse.RESPONSE_HEADER_SEGMENT_TERMINATED_EARLY_KEY);
+  public void testResponseHeaderSegmentTerminatedEarly() {
+    assertEquals(
+        "SolrQueryResponse.RESPONSE_HEADER_SEGMENT_TERMINATED_EARLY_KEY value changed",
+        "segmentTerminatedEarly",
+        SolrQueryResponse.RESPONSE_HEADER_SEGMENT_TERMINATED_EARLY_KEY);
   }
 
   @Test
-  public void testValues() throws Exception {
+  public void testValues() {
     final SolrQueryResponse response = new SolrQueryResponse();
     assertEquals("values initially not empty", 0, response.getValues().size());
     // initially empty, then add something
@@ -60,13 +63,13 @@ public class TestSolrQueryResponse extends SolrTestCase {
     response.add("key2", "value2");
     {
       @SuppressWarnings({"unchecked"})
-      final Iterator<Map.Entry<String,Object>> it = response.getValues().iterator();
+      final Iterator<Map.Entry<String, Object>> it = response.getValues().iterator();
       assertTrue(it.hasNext());
-      final Map.Entry<String,Object> entry1 = it.next();
+      final Map.Entry<String, Object> entry1 = it.next();
       assertEquals("key1", entry1.getKey());
       assertEquals("value1", entry1.getValue());
       assertTrue(it.hasNext());
-      final Map.Entry<String,Object> entry2 = it.next();
+      final Map.Entry<String, Object> entry2 = it.next();
       assertEquals("key2", entry2.getKey());
       assertEquals("value2", entry2.getValue());
       assertFalse(it.hasNext());
@@ -74,26 +77,26 @@ public class TestSolrQueryResponse extends SolrTestCase {
   }
 
   @Test
-  public void testResponse() throws Exception {
+  public void testResponse() {
     final SolrQueryResponse response = new SolrQueryResponse();
-    assertEquals("response initial value", null, response.getResponse());
-    final Object newValue = (random().nextBoolean()
-        ? (random().nextBoolean() ? "answer" : Integer.valueOf(42)) : null);
+    assertNull("response initial value", response.getResponse());
+    final Object newValue =
+        (random().nextBoolean() ? (random().nextBoolean() ? "answer" : Integer.valueOf(42)) : null);
     response.addResponse(newValue);
     assertEquals("response new value", newValue, response.getResponse());
   }
 
   @Test
-  public void testToLog() throws Exception {
+  public void testToLog() {
     final SolrQueryResponse response = new SolrQueryResponse();
     assertEquals("toLog initially not empty", 0, response.getToLog().size());
     assertEquals("logid_only", response.getToLogAsString("logid_only"));
     // initially empty, then add something
     response.addToLog("key1", "value1");
     {
-      final Iterator<Map.Entry<String,Object>> it = response.getToLog().iterator();
+      final Iterator<Map.Entry<String, Object>> it = response.getToLog().iterator();
       assertTrue(it.hasNext());
-      final Map.Entry<String,Object> entry1 = it.next();
+      final Map.Entry<String, Object> entry1 = it.next();
       assertEquals("key1", entry1.getKey());
       assertEquals("value1", entry1.getValue());
       assertFalse(it.hasNext());
@@ -103,13 +106,13 @@ public class TestSolrQueryResponse extends SolrTestCase {
     // and then add something else
     response.addToLog("key2", "value2");
     {
-      final Iterator<Map.Entry<String,Object>> it = response.getToLog().iterator();
+      final Iterator<Map.Entry<String, Object>> it = response.getToLog().iterator();
       assertTrue(it.hasNext());
-      final Map.Entry<String,Object> entry1 = it.next();
+      final Map.Entry<String, Object> entry1 = it.next();
       assertEquals("key1", entry1.getKey());
       assertEquals("value1", entry1.getValue());
       assertTrue(it.hasNext());
-      final Map.Entry<String,Object> entry2 = it.next();
+      final Map.Entry<String, Object> entry2 = it.next();
       assertEquals("key2", entry2.getKey());
       assertEquals("value2", entry2.getValue());
       assertFalse(it.hasNext());
@@ -119,14 +122,18 @@ public class TestSolrQueryResponse extends SolrTestCase {
   }
 
   @Test
-  public void testReturnFields() throws Exception {
+  public void testReturnFields() {
     final SolrQueryResponse response = new SolrQueryResponse();
     final ReturnFields defaultReturnFields = new SolrReturnFields();
-    assertEquals("returnFields initial value", defaultReturnFields.toString(), response.getReturnFields().toString());
-    final SolrReturnFields newValue = new SolrReturnFields((random().nextBoolean()
-        ? SolrReturnFields.SCORE : "value"), null);
+    assertEquals(
+        "returnFields initial value",
+        defaultReturnFields.toString(),
+        response.getReturnFields().toString());
+    final SolrReturnFields newValue =
+        new SolrReturnFields((random().nextBoolean() ? SolrReturnFields.SCORE : "value"), null);
     response.setReturnFields(newValue);
-    assertEquals("returnFields new value", newValue.toString(), response.getReturnFields().toString());
+    assertEquals(
+        "returnFields new value", newValue.toString(), response.getReturnFields().toString());
   }
 
   @Test
@@ -134,7 +141,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     SolrQueryResponse response = new SolrQueryResponse();
     Iterator<Entry<String, String>> it = response.httpHeaders();
     assertFalse(it.hasNext());
-    
+
     response.addHttpHeader("key1", "value1");
     it = response.httpHeaders();
     assertTrue(it.hasNext());
@@ -142,7 +149,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("key1", entry.getKey());
     assertEquals("value1", entry.getValue());
     assertFalse(it.hasNext());
-    
+
     response.addHttpHeader("key1", "value2");
     it = response.httpHeaders();
     assertTrue(it.hasNext());
@@ -154,7 +161,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("key1", entry.getKey());
     assertEquals("value2", entry.getValue());
     assertFalse(it.hasNext());
-    
+
     response.addHttpHeader("key2", "value2");
     it = response.httpHeaders();
     assertTrue(it.hasNext());
@@ -171,13 +178,13 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("value2", entry.getValue());
     assertFalse(it.hasNext());
   }
-  
+
   @Test
   public void testSetHttpHeader() {
     SolrQueryResponse response = new SolrQueryResponse();
     Iterator<Entry<String, String>> it = response.httpHeaders();
     assertFalse(it.hasNext());
-    
+
     response.setHttpHeader("key1", "value1");
     it = response.httpHeaders();
     assertTrue(it.hasNext());
@@ -185,7 +192,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("key1", entry.getKey());
     assertEquals("value1", entry.getValue());
     assertFalse(it.hasNext());
-    
+
     response.setHttpHeader("key1", "value2");
     it = response.httpHeaders();
     assertTrue(it.hasNext());
@@ -193,7 +200,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("key1", entry.getKey());
     assertEquals("value2", entry.getValue());
     assertFalse(it.hasNext());
-    
+
     response.addHttpHeader("key1", "value3");
     response.setHttpHeader("key1", "value4");
     it = response.httpHeaders();
@@ -202,7 +209,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("key1", entry.getKey());
     assertEquals("value4", entry.getValue());
     assertFalse(it.hasNext());
-    
+
     response.setHttpHeader("key2", "value5");
     it = response.httpHeaders();
     assertTrue(it.hasNext());
@@ -215,7 +222,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("value5", entry.getValue());
     assertFalse(it.hasNext());
   }
-  
+
   @Test
   public void testRemoveHttpHeader() {
     SolrQueryResponse response = new SolrQueryResponse();
@@ -225,7 +232,7 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertTrue(response.httpHeaders().hasNext());
     assertEquals("value1", response.removeHttpHeader("key1"));
     assertFalse(response.httpHeaders().hasNext());
-    
+
     response.addHttpHeader("key1", "value2");
     response.addHttpHeader("key1", "value3");
     response.addHttpHeader("key2", "value4");
@@ -235,9 +242,8 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertEquals("value3", response.removeHttpHeader("key1"));
     assertNull(response.removeHttpHeader("key1"));
     assertEquals("key2", response.httpHeaders().next().getKey());
-    
   }
-  
+
   @Test
   public void testRemoveHttpHeaders() {
     SolrQueryResponse response = new SolrQueryResponse();
@@ -245,48 +251,73 @@ public class TestSolrQueryResponse extends SolrTestCase {
     assertFalse(it.hasNext());
     response.addHttpHeader("key1", "value1");
     assertTrue(response.httpHeaders().hasNext());
-    assertEquals(Arrays.asList("value1"), response.removeHttpHeaders("key1"));
+    assertEquals(List.of("value1"), List.copyOf(response.removeHttpHeaders("key1")));
     assertFalse(response.httpHeaders().hasNext());
-    
+
     response.addHttpHeader("key1", "value2");
     response.addHttpHeader("key1", "value3");
     response.addHttpHeader("key2", "value4");
     assertTrue(response.httpHeaders().hasNext());
-    assertEquals(Arrays.asList(new String[]{"value2", "value3"}), response.removeHttpHeaders("key1"));
+    assertEquals(List.of("value2", "value3"), List.copyOf(response.removeHttpHeaders("key1")));
     assertNull(response.removeHttpHeaders("key1"));
     assertEquals("key2", response.httpHeaders().next().getKey());
   }
-  
+
   @Test
-  public void testException() throws Exception {
+  public void testException() {
     final SolrQueryResponse response = new SolrQueryResponse();
-    assertEquals("exception initial value", null, response.getException());
-    final Exception newValue = (random().nextBoolean()
-        ? (random().nextBoolean() ? new ArithmeticException() : new IOException()) : null);
+    assertNull("exception initial value", response.getException());
+    final Exception newValue =
+        (random().nextBoolean()
+            ? (random().nextBoolean() ? new ArithmeticException() : new IOException())
+            : null);
     response.setException(newValue);
     assertEquals("exception new value", newValue, response.getException());
   }
 
   @Test
-  public void testResponseHeader() throws Exception {
+  public void testResponseHeader() {
     final SolrQueryResponse response = new SolrQueryResponse();
-    assertEquals("responseHeader initially present", null, response.getResponseHeader());
+    assertNull("responseHeader initially present", response.getResponseHeader());
     final NamedList<Object> newValue = new SimpleOrderedMap<>();
     newValue.add("key1", "value1");
     response.add("key2", "value2");
     response.addResponseHeader(newValue);
     assertEquals("responseHeader new value", newValue, response.getResponseHeader());
     response.removeResponseHeader();
-    assertEquals("responseHeader removed value", null, response.getResponseHeader());
+    assertNull("responseHeader removed value", response.getResponseHeader());
   }
 
   @Test
-  public void testHttpCaching() throws Exception {
+  public void testHttpCaching() {
     final SolrQueryResponse response = new SolrQueryResponse();
-    assertEquals("httpCaching initial value", true, response.isHttpCaching());
+    assertTrue("httpCaching initial value", response.isHttpCaching());
     final boolean newValue = random().nextBoolean();
     response.setHttpCaching(newValue);
     assertEquals("httpCaching new value", newValue, response.isHttpCaching());
   }
 
+  @Test
+  public void testConvertToHEADStyleResponse() {
+    final SolrQueryResponse response = new SolrQueryResponse();
+    final NamedList<Object> newValue = new SimpleOrderedMap<>();
+    newValue.add("responseHeaderKey1", "value1");
+    response.add("responseHeaderKey2", "value2");
+    response.addResponseHeader(newValue);
+
+    response.addResponse("foo");
+    response.add("bob", "dole");
+
+    response.addHttpHeader("key1", "value1");
+
+    NamedList<Object> blank = new SimpleOrderedMap<>();
+    response.setAllValues(blank);
+
+    Iterator<Entry<String, String>> it = response.httpHeaders();
+    assertTrue(it.hasNext());
+    Entry<String, String> entry = it.next();
+    assertEquals("key1", entry.getKey());
+    assertEquals("value1", entry.getValue());
+    assertFalse(it.hasNext());
+  }
 }
